; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_UpdateGlobalServerFlags.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_UpdateGlobalServerFlags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GSF_DISABLE_PUSH_ROUTE = common dso_local global i32 0, align 4
@GSF_DISABLE_RADIUS_AUTH = common dso_local global i32 0, align 4
@GSF_DISABLE_CERT_AUTH = common dso_local global i32 0, align 4
@GSF_DISABLE_DEEP_LOGGING = common dso_local global i32 0, align 4
@GSF_DISABLE_AC = common dso_local global i32 0, align 4
@GSF_DISABLE_SYSLOG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UpdateGlobalServerFlags(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = icmp eq %struct.TYPE_3__* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %8, %2
  br label %35

12:                                               ; preds = %8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @SiIsEnterpriseFunctionsRestrictedOnOpenSource(i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* @GSF_DISABLE_PUSH_ROUTE, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @SetGlobalServerFlag(i32 %17, i32 %18)
  %20 = load i32, i32* @GSF_DISABLE_RADIUS_AUTH, align 4
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @SetGlobalServerFlag(i32 %20, i32 %21)
  %23 = load i32, i32* @GSF_DISABLE_CERT_AUTH, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @SetGlobalServerFlag(i32 %23, i32 %24)
  %26 = load i32, i32* @GSF_DISABLE_DEEP_LOGGING, align 4
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @SetGlobalServerFlag(i32 %26, i32 %27)
  %29 = load i32, i32* @GSF_DISABLE_AC, align 4
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @SetGlobalServerFlag(i32 %29, i32 %30)
  %32 = load i32, i32* @GSF_DISABLE_SYSLOG, align 4
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @SetGlobalServerFlag(i32 %32, i32 %33)
  br label %35

35:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @SiIsEnterpriseFunctionsRestrictedOnOpenSource(i32) #1

declare dso_local i32 @SetGlobalServerFlag(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
